--- a/qdrant-landing/themes/qdrant/layouts/partials/css.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/css.html
@@ -2,6 +2,7 @@
 
 <link href="{{ "css/bootstrap.css" | absURL }}" rel="stylesheet">
 <link href="{{ "css/main.css" | absURL }}" rel="stylesheet">
+<link href="{{ "css/qdrant.css" | absURL }}" rel="stylesheet">
 <link href="{{ "css/responsive.css" | absURL }}" rel="stylesheet">
 
 
