--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -51,7 +51,7 @@
 /* @import url(swiper.css); */
 @import url('flaticon.css');
 /* @import url('jquery-ui.css'); */
-/* @import url('custom-animate.css'); */
+@import url('custom-animate.css');
 /* @import url('jquery.fancybox.min.css'); */
 /* @import url('jquery.bootstrap-touchspin.css'); */
 /* @import url('jquery.mCustomScrollbar.min.css'); */
