--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -12,9 +12,8 @@
             <div class="inner-column">
               <h1><span>Qdrant</span><br>Neural Search Engine</h1>
               <div class="sec-title text mb-3">Build your own
-                AI-powered product
-                with Qdrant - vector search engine.
-                <h4 class="font-weight-bold mt-3 mb-0">It's Free and <a target="_blank" href="{{ .Site.Params.github }}">Open Source </a></h4>
+                AI-powered product with Qdrant - vector similarity search engine.
+                <h4 class="font-weight-bold mt-3 mb-0">It's Free and <a class="os-link" target="_blank" href="{{ .Site.Params.github }}">Open Source </a></h4>
               </div>
 
               <!-- Installation Section -->
@@ -64,7 +63,7 @@
           <div class="inner-column">
             <!-- Sec Title -->
             <div class="sec-title text-center">
-              <h2> {{ .Title | safeHTML }}</h2>
+              <h2>{{ .Title | safeHTML }}</h2>
               <div class="text">{{ .Content }}
               </div>
             </div>
@@ -99,15 +98,15 @@
   <!-- End Features Section -->
 
   <!-- Business Section Two -->
+  {{ with (.Site.GetPage "section" "solutions") }}
+
   <section class="business-section-two">
     <div class="pattern-layer" style="background-image: url(/images/background/pattern-11.png)"></div>
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
-        <h2>Use Cases and Examples For <span>Your Business</span></h2>
-        <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
-          sollicitudin. Maecenas a imperdiet <br> libero, ac congue orci. Pellentesque et erat id leo tincidunt aliquam.
-        </div>
+        <h2>{{ .Title | safeHTML }}</h2>
+        <div class="text">{{ .Params.subtitle }}</div>
       </div>
       <div class="inner-container">
         <div class="pattern-layer-two" style="background-image: url(/images/background/3.png)"></div>
@@ -118,57 +117,42 @@
 
             <!--Tab Btns-->
             <ul class="tab-btns tab-buttons clearfix">
-              <li data-tab="#prod-diabetes" class="tab-btn active-btn wow fadeInLeft" data-wow-delay="0ms"
-                  data-wow-duration="1500ms">
-                <h5>Neural <br>Text Search</h5>
-                <i class="icon flaticon-paper"></i>
-              </li>
-              <li data-tab="#prod-sales" class="tab-btn wow fadeInUp" data-wow-delay="0ms" data-wow-duration="1500ms">
-                <h5>Image Search - <br>food discovery</h5>
-                <i class="icon flaticon-image-1"></i>
-
-              </li>
-              <li data-tab="#prod-education" class="tab-btn wow fadeInRight" data-wow-delay="0ms"
-                  data-wow-duration="1500ms">
-                <h5>Recommendations <br>with conditions</h5>
-                <i class="icon flaticon-advertising"></i>
-              </li>
+              {{ range $i, $e := first 3 .Pages }}
+                <li data-tab="#prod-{{ .Params.tabid }}" class="tab-btn {{ if not $i }}active-btn{{ end }} fadeInLeft">
+                  <h5>{{ $e.Title | safeHTML }}</h5>
+                  <i class="icon flaticon-{{ .Params.icon }}"></i>
+                </li>
+              {{ end }}
             </ul>
+            
+            {{ range $i, $e := first 3 .Pages }}
 
             <!--Tabs Container-->
             <div class="tabs-content">
 
               <!--Tab / Active Tab-->
-              <div class="tab active-tab" id="prod-diabetes">
+              <div class="tab {{ if not $i }}active-tab{{ end }}" id="prod-{{ .Params.tabid }}">
                 <div class="content">
                   <div class="row clearfix">
 
                     <!-- Content Column -->
                     <div class="content-column col-lg-6 col-md-12 col-sm-12">
                       <div class="inner-column mb-5">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
-                          sollicitudin. Maecenas a imperdiet libero, ac congue orci.</p>
-                        <ul class="business-list mb-5">
-                          <li>WHAT: Replace old-school text search with modern neural-based approach. Use semantic
-                            embeddings instead of keywords.
-                          </li>
-                          <li>WHY: Increase search recall, allow users to search even for short texts with which no
-                            keywords match.
-                          </li>
-                          <li>HOW: With pre-trained neural network and Qdrant vector search engine</li>
-                        </ul>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Demo</span></a>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Tutorial</span></a>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Source Code</span></a>
+                        {{ .Content }}
+                        {{ if .Params.demo_link }}<a target="_blank" href="{{ .Params.demo_link }}" class="theme-btn btn-style-four"><span class="txt">Demo</span></a>{{end}}
+                        {{ if .Params.tutorial_link }}<a target="_blank" href="{{ .Params.tutorial_link }}" class="theme-btn btn-style-four"><span class="txt">Tutorial</span></a>{{end}}
+                        {{ if .Params.source_link }}<a target="_blank" href="{{ .Params.source_link }}" class="theme-btn btn-style-four"><span class="txt">Source Code</span></a>{{end}}
+                        {{ if .Params.custom_link }}<a target="_blank" href="{{ .Params.custom_link }}" class="theme-btn btn-style-four"><span class="txt">{{ .Params.custom_link_name }}</span></a>{{end}}
                       </div>
                     </div>
-
+                    
                     <!-- Image Column -->
                     <div class="image-column col-lg-6 col-md-12 col-sm-12">
                       <div class="inner-column">
                         <div class="image">
-                          <a href="https://via.placeholder.com/536x513" data-fancybox="business" data-caption=""><img
-                                  src="https://via.placeholder.com/536x513" alt=""/></a>
+                          <h5>{{ .Params.image_caption }}</h5>
+                          <a data-caption="{{ .Params.image_caption }}"><img src="{{ .Params.image }}" alt=""/></a>
+                          <!-- <a data-caption=""><img src="https://via.placeholder.com/536x513" alt=""/></a> -->
                         </div>
                       </div>
                     </div>
@@ -177,79 +161,7 @@
                 </div>
               </div>
 
-              <!-- Tab -->
-              <div class="tab" id="prod-sales">
-                <div class="content">
-                  <div class="row clearfix">
-
-                    <!-- Content Column -->
-                    <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                      <div class="inner-column">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
-                          sollicitudin. Maecenas a imperdiet libero, ac congue orci.</p>
-                        <ul class="business-list mb-5">
-                          <li>WHAT: Build a visual food discovery application. Search food nearby</li>
-                          <li>WHY: Creates a new approach to discover restaurants and cafes. Enables a whole new
-                            dimension of food discovery
-                          </li>
-                          <li>HOW: With pre-trained ResNet154 + Qdrant recommendation API + Qdrant geo-filters.</li>
-                        </ul>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Demo</span></a>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Tutorial</span></a>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Source Code</span></a>
-                      </div>
-                    </div>
-
-                    <!-- Image Column -->
-                    <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                      <div class="inner-column">
-                        <div class="image">
-                          <a href="https://via.placeholder.com/536x513" data-fancybox="business" data-caption=""><img
-                                  src="https://via.placeholder.com/536x513" alt=""/></a>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
-
-              <!-- Tab -->
-              <div class="tab" id="prod-education">
-                <div class="content">
-                  <div class="row clearfix">
-
-                    <!-- Content Column -->
-                    <div class="content-column col-lg-6 col-md-12 col-sm-12">
-                      <div class="inner-column">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus at mauris eu
-                          sollicitudin. Maecenas a imperdiet libero, ac congue orci.</p>
-                        <ul class="business-list mb-5">
-                          <li>WHAT: Suggest an additional goods based on client interactions - purchases, viewed pages
-                            or other activities
-                          </li>
-                          <li>WHY: Increase basket size, sell more shit</li>
-                          <li>HOW: Train custom LightFM + Qdrant recommendation API</li>
-                        </ul>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Demo</span></a>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Tutorial</span></a>
-                        <a href="#" class="theme-btn btn-style-four"><span class="txt">Source Code</span></a>
-                      </div>
-                    </div>
-
-                    <!-- Image Column -->
-                    <div class="image-column col-lg-6 col-md-12 col-sm-12">
-                      <div class="inner-column">
-                        <div class="image">
-                          <a href="https://via.placeholder.com/536x513" data-fancybox="business" data-caption=""><img
-                                  src="https://via.placeholder.com/536x513" alt=""/></a>
-                        </div>
-                      </div>
-                    </div>
-
-                  </div>
-                </div>
-              </div>
+            {{ end }}
 
             </div>
           </div>
@@ -258,6 +170,7 @@
       </div>
     </div>
   </section>
+  {{ end }}
   <!-- End Business Section -->
 
   <!--Clients Section-->
