--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -271,10 +271,8 @@
     <div class="auto-container">
       <div class="row">
         <div class="col-12 sec-title text-center">
-          <h2>Neural Search Engine</h2>
-          <div class="text">Build your own
-            AI-powered product
-            with Qdrant - vector search engine.
+          <h2>Get <span>Updates</span> from Qdrant</h2>
+          <div class="text">We will write about new features that appear in Qdrant and novel examples of its applications.
           </div>
         </div>
         <div class="content-column offset-lg-3 col-lg-6 col-md-12 col-sm-12">
@@ -283,7 +281,7 @@
             <form method="post" action="contact.html">
               <div class="form-group">
                 <input type="email" name="email" value="" placeholder="Enter Your Email" required="">
-                <button type="submit" class="theme-btn btn-style-three"><span class="txt">Tell me more</span>
+                <button type="submit" class="theme-btn btn-style-three"><span class="txt">Subscribe</span>
                 </button>
               </div>
             </form>
@@ -293,147 +291,5 @@
     </div>
   </section>
   <!-- End of Contact Section -->
-
-  <!-- Main Footer -->
-  <footer class="main-footer">
-    <div class="pattern-layer" style="background-image: url(/images/background/pattern-4.png)"></div>
-    <div class="pattern-layer-two" style="background-image: url(/images/background/pattern-5.png)"></div>
-    <div class="auto-container">
-      <!--Widgets Section-->
-      <div class="widgets-section">
-        <div class="row clearfix">
-
-          <!-- Footer Column -->
-          <div class="footer-column col-lg-4 col-md-6 col-sm-12">
-            <div class="footer-widget contact-widget">
-              <div class="footer-title">
-                <h4>Contact us</h4>
-              </div>
-              <ul class="contact-list">
-                <li><span class="icon fa fa-map-o"></span> Berlin</li>
-                <li><span class="icon fa fa-envelope"></span> <a href="mailto:info@qdrant.com">info@qdrant.com</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Footer Column -->
-          <div class="footer-column col-lg-3 col-md-6 col-sm-12">
-            <div class="footer-widget contact-widget">
-              <div class="footer-title">
-                <h4>Navigation</h4>
-              </div>
-              <ul class="nav-list">
-                <li><a href="#">Home</a></li>
-                <li><a href="solutions.html">Solutions</a></li>
-                <li><a href="documentation.html">Documentation</a></li>
-              </ul>
-            </div>
-          </div>
-
-          <!-- Footer Column -->
-          <div class="footer-column col-lg-5 col-md-6 col-sm-12">
-            <div class="footer-widget news-widget">
-              <div class="footer-title">
-                <h4>Latest Blog Posts</h4>
-              </div>
-              <!-- Footer Column -->
-              <div class="widget-content">
-
-                <div class="post">
-                  <div class="thumb"><a href="blog-detail.html"><img src="https://via.placeholder.com/76x70" alt=""></a>
-                  </div>
-                  <h4><a href="blog-detail.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi finibus
-                    at.</a></h4>
-                </div>
-
-                <div class="post">
-                  <div class="thumb"><a href="blog-detail.html"><img src="https://via.placeholder.com/76x70" alt=""></a>
-                  </div>
-                  <h4><a href="blog-detail.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></h4>
-                </div>
-
-                <div class="post">
-                  <div class="thumb"><a href="blog-detail.html"><img src="https://via.placeholder.com/76x70" alt=""></a>
-                  </div>
-                  <h4><a href="blog-detail.html">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a></h4>
-                </div>
-
-              </div>
-
-              <ul class="social-box">
-                <li><a href="https://github.com/qdrant/qdrant" target="_blank"><i class="flaticon-github"></i></a></li>
-                <li><a href="#" target="_blank"><i class="flaticon-linkedin"></i></a></li>
-                <li><a href="https://t.me/neural_network_engineering" target="_blank"><i
-                        class="flaticon-telegram"></i></a></li>
-              </ul>
-
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
-    <!-- Footer Bottom -->
-    <div class="footer-bottom">
-      <div class="auto-container">
-        <div class="row clearfix">
-
-          <!-- Copyright Column -->
-          <div class="copyright-column col-lg-6 col-md-12 col-sm-12">
-            <div class="copyright">&copy; 2021 Qdrant. All Rights Reserved</div>
-          </div>
-
-          <!-- Language Column -->
-          <div class="language-column col-lg-6 col-md-12 col-sm-12">
-            <!--Language-->
-            <div class="language dropdown"><a class="btn btn-default dropdown-toggle" id="dropdownMenu2"
-                                              data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" href="#">Language:
-              English &nbsp;<span class="icon fa fa-angle-down"></span></a>
-              <ul class="dropdown-menu style-one" aria-labelledby="dropdownMenu2">
-                <li><a href="#">English</a></li>
-              </ul>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-  </footer>
-  <!-- End Main Footer -->
-
-</div>
-<!--End pagewrapper-->
-
-<!--Scroll to top-->
-<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-arrow-circle-up"></span></div>
-
-<!-- Modal -->
-<div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="contact form" aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Some Header</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        <!-- Newsletter Form -->
-        <p>Some text about why customers should give their emails.</p>
-        <div class="newsletter-form">
-          <form method="post" action="contact.html">
-            <div class="form-group">
-              <input type="email" name="email" value="" placeholder="Enter Your Email" required="">
-              <button type="submit" class="theme-btn btn-style-three"><span class="txt">Tell me more</span>
-              </button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- End of Modal -->
 
 {{ partial "footer" . }}
