--- a/qdrant-landing/themes/qdrant/static/css/flaticon.css
+++ b/qdrant-landing/themes/qdrant/static/css/flaticon.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: "flaticon";
-    src: url("../fonts/flaticon.ttf?5752bb6e5be233d3621824cf8234af16") format("truetype"),
-url("../fonts/flaticon.woff?5752bb6e5be233d3621824cf8234af16") format("woff"),
-url("../fonts/flaticon.woff2?5752bb6e5be233d3621824cf8234af16") format("woff2"),
-url("../fonts/flaticon.eot?5752bb6e5be233d3621824cf8234af16#iefix") format("embedded-opentype"),
-url("../fonts/flaticon.svg?5752bb6e5be233d3621824cf8234af16#flaticon") format("svg");
+    src: url("../fonts/flaticon.ttf?8297621f0226981714303c622fd0b285") format("truetype"),
+url("../fonts/flaticon.woff?8297621f0226981714303c622fd0b285") format("woff"),
+url("../fonts/flaticon.woff2?8297621f0226981714303c622fd0b285") format("woff2"),
+url("../fonts/flaticon.eot?8297621f0226981714303c622fd0b285#iefix") format("embedded-opentype"),
+url("../fonts/flaticon.svg?8297621f0226981714303c622fd0b285#flaticon") format("svg");
 }
 
 i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
@@ -18,150 +18,168 @@ i[class^="flaticon-"]:before, i[class*=" flaticon-"]:before {
     -moz-osx-font-smoothing: grayscale;
 }
 
-.flaticon-advertising:before {
+.flaticon-ad-campaign:before {
     content: "\f101";
 }
-.flaticon-api-1:before {
+.flaticon-advertising:before {
     content: "\f102";
 }
-.flaticon-api:before {
+.flaticon-api-1:before {
     content: "\f103";
 }
-.flaticon-artificial-intelligence:before {
+.flaticon-api:before {
     content: "\f104";
 }
-.flaticon-bot:before {
+.flaticon-artificial-intelligence:before {
     content: "\f105";
 }
-.flaticon-bullseye:before {
+.flaticon-bank:before {
     content: "\f106";
 }
-.flaticon-check-mark:before {
+.flaticon-bot:before {
     content: "\f107";
 }
-.flaticon-clothing:before {
+.flaticon-bullseye:before {
     content: "\f108";
 }
-.flaticon-cluster:before {
+.flaticon-check-mark:before {
     content: "\f109";
 }
-.flaticon-compare-1:before {
+.flaticon-clothing:before {
     content: "\f10a";
 }
-.flaticon-compare:before {
+.flaticon-cluster:before {
     content: "\f10b";
 }
-.flaticon-connection:before {
+.flaticon-compare-1:before {
     content: "\f10c";
 }
-.flaticon-copy:before {
+.flaticon-compare:before {
     content: "\f10d";
 }
-.flaticon-cpu:before {
+.flaticon-connection:before {
     content: "\f10e";
 }
-.flaticon-crab:before {
+.flaticon-copy:before {
     content: "\f10f";
 }
-.flaticon-customer-service:before {
+.flaticon-cpu:before {
     content: "\f110";
 }
-.flaticon-dairy-products:before {
+.flaticon-crab:before {
     content: "\f111";
 }
-.flaticon-data-1:before {
+.flaticon-customer-service:before {
     content: "\f112";
 }
-.flaticon-data-mining:before {
+.flaticon-dairy-products:before {
     content: "\f113";
 }
-.flaticon-data:before {
+.flaticon-data-1:before {
     content: "\f114";
 }
-.flaticon-distribution:before {
+.flaticon-data-mining:before {
     content: "\f115";
 }
-.flaticon-email:before {
+.flaticon-data:before {
     content: "\f116";
 }
-.flaticon-face-scan:before {
+.flaticon-distribution:before {
     content: "\f117";
 }
-.flaticon-filter:before {
+.flaticon-email:before {
     content: "\f118";
 }
-.flaticon-github:before {
+.flaticon-face-scan:before {
     content: "\f119";
 }
-.flaticon-home:before {
+.flaticon-filter:before {
     content: "\f11a";
 }
-.flaticon-image-1:before {
+.flaticon-game-controller:before {
     content: "\f11b";
 }
-.flaticon-image:before {
+.flaticon-github:before {
     content: "\f11c";
 }
-.flaticon-job-search:before {
+.flaticon-hammer:before {
     content: "\f11d";
 }
-.flaticon-linkedin:before {
+.flaticon-home:before {
     content: "\f11e";
 }
-.flaticon-loupe:before {
+.flaticon-image-1:before {
     content: "\f11f";
 }
-.flaticon-menu:before {
+.flaticon-image:before {
     content: "\f120";
 }
-.flaticon-microprocessor:before {
+.flaticon-job-search:before {
     content: "\f121";
 }
-.flaticon-neural:before {
+.flaticon-linkedin:before {
     content: "\f122";
 }
-.flaticon-optimization:before {
+.flaticon-loupe:before {
     content: "\f123";
 }
-.flaticon-paper:before {
+.flaticon-menu:before {
     content: "\f124";
 }
-.flaticon-scan:before {
+.flaticon-microprocessor:before {
     content: "\f125";
 }
-.flaticon-scatter-graph:before {
+.flaticon-mri:before {
     content: "\f126";
 }
-.flaticon-search-1:before {
+.flaticon-neural:before {
     content: "\f127";
 }
-.flaticon-search-2:before {
+.flaticon-optimization:before {
     content: "\f128";
 }
-.flaticon-search:before {
+.flaticon-paper:before {
     content: "\f129";
 }
-.flaticon-searching:before {
+.flaticon-scan:before {
     content: "\f12a";
 }
-.flaticon-star-1:before {
+.flaticon-scatter-graph:before {
     content: "\f12b";
 }
-.flaticon-star:before {
+.flaticon-search-1:before {
     content: "\f12c";
 }
-.flaticon-telegram:before {
+.flaticon-search-2:before {
     content: "\f12d";
 }
-.flaticon-turn:before {
+.flaticon-search:before {
     content: "\f12e";
 }
-.flaticon-twitter:before {
+.flaticon-searching:before {
     content: "\f12f";
 }
-.flaticon-unstructured-data:before {
+.flaticon-star-1:before {
     content: "\f130";
 }
-.flaticon-x-mark:before {
+.flaticon-star:before {
     content: "\f131";
+}
+.flaticon-telegram:before {
+    content: "\f132";
+}
+.flaticon-turn:before {
+    content: "\f133";
+}
+.flaticon-twitter:before {
+    content: "\f134";
+}
+.flaticon-unstructured-data:before {
+    content: "\f135";
+}
+.flaticon-x-mark:before {
+    content: "\f136";
+}
+.flaticon-x-rays:before {
+    content: "\f137";
 }
