--- a/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/second_header.html
@@ -2,10 +2,10 @@
 <section class="page-title">
     <div class="pattern-layer" style="background-image: url(/images/background/pattern-12.png)"></div>
     <div class="auto-container">
-        <h1> {{ .Title }}</h1>
+        <h1> {{ .Params.page_title | safeHTML }}</h1>
         <ul class="bread-crumb clearfix">
             <li><a href="/"><i class="flaticon-home small"></i> Home</a></li>
-            <li>{{ .Title }}</li>
+            <li>{{ .Params.page_title | safeHTML }}</li>
         </ul>
     </div>
 </section>
