--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -105,7 +105,7 @@
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
-        <h2>{{ .Title | safeHTML }}</h2>
+        <h2>{{ .Params.section_title | safeHTML }}</h2>
         <div class="text">{{ .Params.subtitle }}</div>
       </div>
       <div class="inner-container">
@@ -198,7 +198,7 @@
 
   {{ with (.Site.GetPage "section" "articles") }}
   <!-- End Projects Section Two -->
-  <section class="projects-section-two" style="background-image: url(/images/background/pattern-9.png)">
+  <section id="articles" class="projects-section-two" style="background-image: url(/images/background/pattern-9.png)">
     <div class="auto-container">
       <!-- Sec Title -->
       <div class="sec-title centered">
