--- a/qdrant-landing/themes/qdrant/layouts/partials/header.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/header.html
@@ -5,7 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">      
         
+        {{ if and ($.IsNode) (eq $.Section "") }}
         <title>{{ .Title }}</title>
+        {{ else }}
+        <title>Qdrant - {{ .Title }}</title>
+        {{ end }}
 
         {{ partial "seo_schema" . }}
         
