--- a/qdrant-landing/themes/qdrant/layouts/partials/footer.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/footer.html
@@ -57,8 +57,8 @@
         
 
                 <div class="post">
-                  <div class="thumb"><a href="{{ $link }}"><img src="{{ .Params.small_preview_image }}" alt=""></a>
-                  </div>
+                  <!-- <div class="thumb"><a href="{{ $link }}"><img src="{{ .Params.small_preview_image }}" alt=""></a> -->
+                  <!-- </div> -->
                   <h4><a href="{{ $link }}">{{ .Params.short_description }}</a></h4>
                 </div>
 
