--- a/qdrant-landing/themes/qdrant/static/css/main.css
+++ b/qdrant-landing/themes/qdrant/static/css/main.css
@@ -2946,7 +2946,7 @@ img{
 .main-footer .footer-widget h4{
 	position:relative;
 	font-weight:700;
-	color:#ffffff;
+	/* color:#ffffff; */
 	line-height:1.2em;
 	text-transform:capitalize;
 }
@@ -3041,9 +3041,9 @@ img{
 .main-footer .news-widget .post{
 	position: relative;
 	min-height: 70px;
-	padding-left: 95px;
+	padding-left: 75px;
 	margin-bottom: 15px;
-	padding-right:70px;
+	padding-right:90px;
 }
 
 .main-footer .news-widget .post:last-child{
@@ -3065,7 +3065,7 @@ img{
 
 .main-footer .news-widget .post .thumb img{
 	display: block;
-	width: 100%;
+	width: 55px;
 	height: auto;
 }
 
@@ -4346,7 +4346,7 @@ img{
 .banner-section-two .content-column .text{
 	position:relative;
 	color:#5a5a5a;
-	font-size:18px;
+	font-size:16px;
 	line-height:1.8em;
 	margin-bottom:35px;
 	font-weight:400;
