--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -10,26 +10,41 @@
           <!-- Content Column -->
           <div class="content-column col-lg-6 col-md-12 col-sm-12">
             <div class="inner-column">
-              <h1><span>Qdrant</span><br>Neural Search Engine</h1>
+              <h1>Neural Search Engine</h1>
               <div class="sec-title text mb-3">Build your own
-                AI-powered product with Qdrant - vector similarity search engine.
-                <h4 class="font-weight-bold mt-3 mb-0">It's Free and <a class="os-link" target="_blank" href="{{ .Site.Params.github }}">Open Source </a></h4>
+                AI-powered product with Qdrant - <a class="os-link" target="_blank" href="{{ .Site.Params.github }}">open-source</a> vector similarity search engine.
+                <br/><br/>
+                Get started by downloading a pre-build Docker Image - it is only 35Mb!<br>
+
+                <div class="code mt-3">
+                  <code id="copy-code">docker pull generall/qdrant</code>
+                  <span class="d-inline-block" id="copy-popover" data-toggle="popover" data-content="Text copied!">
+                    <button class="copy-btn lead ml-2" data-clipboard-target="#copy-code" title="Copy code">
+                      <i class="flaticon-copy"></i>
+                    </button>
+                  </span>
+                </div> <br>
+                
+                Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
+                  or build your own neural search <br> with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a>
+
+                <!-- <h4 class="font-weight-bold mt-3 mb-0">It's Free and <a class="os-link" target="_blank" href="{{ .Site.Params.github }}">Open Source </a></h4> -->
               </div>
 
               <!-- Installation Section -->
-              <section class="installation-section">
+              <!-- <section class="installation-section">
                 <p>Get started by downloading a pre-build Docker Image - it is only 35Mb!</p>
                 <div class="code">
                   <code id="copy-code">docker pull generall/qdrant</code>
                   <span class="d-inline-block" id="copy-popover" data-toggle="popover" data-content="Text copied!">
-                    <button class="copy-btn lead ml-4" data-clipboard-target="#copy-code" title="Copy code">
+                    <button class="copy-btn lead ml-2" data-clipboard-target="#copy-code" title="Copy code">
                       <i class="flaticon-copy"></i>
                     </button>
                   </span>
                 </div>
-                <p>Take a look through our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a><br>
-                  or build your own neural search with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a></p>
-              </section>
+                <p>Take a look at our <a target="_blank" href="{{ .Site.Params.quick_start }}">Quick Start Guide</a>
+                  or build your own neural search <br> with our step-by-step <a target="_blank" href="{{ .Site.Params.tutorial }}">Tutorial</a></p>
+              </section> -->
               <!--End Installation Section-->
 
             </div>
