--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -165,8 +165,8 @@
                     <div class="image-column col-lg-6 col-md-12 col-sm-12">
                       <div class="inner-column">
                         <div class="image">
-                          <h5>{{ .Params.image_caption }}</h5>
-                          <a data-caption="{{ .Params.image_caption }}"><img src="{{ .Params.image }}" alt=""/></a>
+                          <!-- <h5>{{ .Params.image_caption }}</h5> -->
+                          <img src="{{ .Params.landing_image }}" alt=""/>
                           <!-- <a data-caption=""><img src="https://via.placeholder.com/536x513" alt=""/></a> -->
                         </div>
                       </div>
