--- a/qdrant-landing/themes/qdrant/layouts/index.html
+++ b/qdrant-landing/themes/qdrant/layouts/index.html
@@ -194,7 +194,7 @@
   <section class="clients-section my-5">
     <div class="sec-title text-center">
       <h2>{{ .Title | safeHTML }}</h2>
-      <div class="text">We can integrate with anything, some of our featured technologies</div>
+      <div class="text">{{ .Params.subtitle}}</div>
     </div>
     <div class="auto-container">
       <div class="sponsors-outer">
